[gd_scene load_steps=7 format=3 uid="uid://dcv0qm4k1wi4q"]

[ext_resource type="Script" uid="uid://b26ofnw1twapk" path="res://src/ui_components/email/email.gd" id="1"]
[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://dqkcly2ad5fqy" path="res://src/ui_components/base/search_line_edit/search_line_edit.tscn" id="3_3e14y"]
[ext_resource type="PackedScene" uid="uid://dfs434t5wtt6x" path="res://src/ui_components/email/list/message_list.tscn" id="3_5tb6d"]
[ext_resource type="PackedScene" uid="uid://c3l6aqkrmtjg2" path="res://src/ui_components/email/visual_message/visual_message.tscn" id="3_diog3"]
[ext_resource type="Script" uid="uid://b7ipi7vefbgps" path="res://src/ui_components/base/defaults/default_check_button.gd" id="4_vi7ar"]

[node name="Email" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
theme_override_constants/separation = 15
script = ExtResource("1")

[node name="List" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Filters" type="HBoxContainer" parent="List"]
layout_mode = 2

[node name="SearchLineEdit" parent="List/Filters" instance=ExtResource("3_3e14y")]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="List/Filters"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="OnlyUnread" type="CheckButton" parent="List/Filters"]
layout_mode = 2
text = "Unread"
script = ExtResource("4_vi7ar")
metadata/_custom_type_script = "uid://b7ipi7vefbgps"

[node name="Starred" type="CheckButton" parent="List/Filters"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
text = "Starred"
script = ExtResource("4_vi7ar")
metadata/_custom_type_script = "uid://b7ipi7vefbgps"

[node name="MessageList" parent="List" instance=ExtResource("3_5tb6d")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Message" parent="." instance=ExtResource("3_diog3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[connection signal="text_changed" from="List/Filters/SearchLineEdit" to="." method="_on_search_line_edit_text_changed"]
[connection signal="toggled" from="List/Filters/OnlyUnread" to="." method="_on_only_unread_toggled"]
[connection signal="toggled" from="List/Filters/Starred" to="." method="_on_starred_toggled"]
[connection signal="show_message" from="List/MessageList" to="." method="_on_message_list_show_message"]
[connection signal="email_action" from="Message" to="." method="_on_message_email_action"]
